--- a/todo
+++ b/todo
@@ -22,26 +22,19 @@ what about NBout?
 start with datapath, assume input buffers are full, ignore memory
 
 BUGS:
-    pipe_ops not propagating?
-
-    Cycle: 99
-    NFU_1: input non-empty                      // NFU is stalling for data
-    SRAM port 0 is busy, increment access       // WHY
-    SRAM port READ complete                     // sounds good, nothings happening
-        this should set_sram_op_complete
-        if(m_ports[i].m_op){ not executed
-
-    Read sent                                   // to where?
-
+    
 
 TODO:
 
     sram needs to be redesigned
-        include DMA in sram
+        include DMA in sram (or let control proc do this)
         issue loads/stores to sram
         sram will only load when there is space
         pipe_ops will cause lines to be ejected
         pipe_ops know which entry to read
+
+    pipe_reg should poll sram for data
+        give pipe_stage[0] pointers to srams
 
   centralize stat collection?
   simple memory model
